<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_rectangle">

        <ImageView
            android:id="@+id/dialog_rating_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcherx"/>

        <TextView
            android:id="@+id/dialog_rating_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_rating_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="20sp"
            android:text="@string/dialog_title"
            android:textColor="@android:color/tab_indicator_text"/>


        <LinearLayout
            android:id="@+id/dialog_rating_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_rating_title"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_rating_button_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="15sp"
                android:text="@string/no"
                android:textColor="@android:color/tab_indicator_text"/>

            <TextView
                android:id="@+id/dialog_rating_button_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="15sp"
                android:text="@string/yes"
                android:textColor="@android:color/tab_indicator_text"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>